--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
         <h1 id="i1" class="fade-out">Join my email list.</h1><br>
         <h2 id="i2" class="fade-out">Get free stuff to help you become the best YouTuber, editor, scriptwriter, thumbnail designer....</h2>
-        <form class="light" name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/1_dl28u3cypBwSW90xHda2qIKvHshhE2TfZwJMhqpiLs/formResponse?" target="hidden_iframe" onsubmit=submitted()>
+        <form class="light" name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLScZB7OWJGY2rBTdovcBKKnUzbXpjxsnkDGWwnJywmvhcqPmfA/viewform?usp=sf_link" target="hidden_iframe" onsubmit=submitted()>
             <div class="fade-out" id="email-entry">
                 <label for="entry.38295861"></label><input type="text" placeholder="Email" name="entry.38295861" id="entry.38295861">
                 <label for="entry.881603344"></label><input type="text" placeholder="Name" name="entry.881603344" id="entry.881603344">
